[gd_scene load_steps=6 format=3 uid="uid://defm7ij8krj6q"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1_jn1xd"]
[ext_resource type="Texture2D" uid="uid://cend8lfxl6qip" path="res://assets/sprites/splash.jpeg" id="2_6elkl"]
[ext_resource type="PackedScene" uid="uid://cysh87p85kmkj" path="res://game/game.tscn" id="2_iob64"]
[ext_resource type="AudioStream" uid="uid://cd0e57agsvbl0" path="res://assets/music/tetrifection_menu.wav" id="3_kt1ro"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rfypd"]
texture = ExtResource("2_6elkl")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jn1xd")
game_scene = ExtResource("2_iob64")

[node name="PC" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rfypd")

[node name="MC" type="MarginContainer" parent="PC"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_bottom = 100

[node name="HB" type="HBoxContainer" parent="PC/MC"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonNew" type="Button" parent="PC/MC/HB"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "New Game"

[node name="ButtonExit" type="Button" parent="PC/MC/HB"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Exit"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kt1ro")
autoplay = true

[connection signal="pressed" from="PC/MC/HB/ButtonNew" to="." method="_on_button_new_pressed"]
[connection signal="pressed" from="PC/MC/HB/ButtonExit" to="." method="_on_button_exit_pressed"]
